Fix menu overlay with z-index

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -88,6 +88,7 @@ body {
 
 .page__menu {
   position: fixed;
+  z-index: 10;
   box-sizing: border-box;
   height: 100vh;
   inset: 0;
